--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,4 @@ set(CMAKE_CXX_STANDARD 11)
 
 set(CMAKE_CXX_FLAGS "-lncurses -lpanel")
 
-add_executable(Uno_Online_Multiplayer main.cpp ui.cpp ui.h ui_initializer.cpp)
+add_executable(Uno_Online_Multiplayer main.cpp ui.cpp ui.h ui_initializer.cpp ui_elements.h)
